// Vitest Snapshot v1

exports[`Table > renders selected rows 1`] = `
<table
  class="sc-lllmON OlBHl"
>
  <thead
    class="sc-iJnaPW eCQUSR"
  >
    <tr
      class="sc-kMjNwy gOtxDB"
    >
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header A
        </div>
      </th>
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header B
        </div>
      </th>
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header C
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class="sc-gikAfH bEiNWC"
  >
    <tr
      class="sc-kMjNwy gOtxDB"
    >
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content A1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content B1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content C1
      </td>
    </tr>
    <tr
      class="sc-kMjNwy cMbghf"
    >
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content A2
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content B2
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content C2
      </td>
    </tr>
    <tr
      class="sc-kMjNwy gOtxDB"
    >
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content A3
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content B3
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders with some content 1`] = `
<table
  class="sc-lllmON OlBHl"
>
  <thead
    class="sc-iJnaPW eCQUSR"
  >
    <tr
      class="sc-kMjNwy gOtxDB"
    >
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header A
        </div>
      </th>
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header A
          <svg
            fill="currentColor"
            height="20px"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.646 9.146a.5.5 0 0 1 .708 0L8 12.793l3.646-3.647a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 0-.708zm0-2.292a.5.5 0 0 0 .708 0L8 3.207l3.646 3.647a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 0 0 0 .708z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </th>
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header B
          <svg
            fill="currentColor"
            height="16px"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </th>
      <th
        class="sc-ezOQGI betmzq"
      >
        <div
          style="display: flex; align-items: center; justify-content: unset;"
        >
          Header C
          <svg
            fill="currentColor"
            height="16px"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </th>
      <td
        class="sc-bYMpWt fbjkRd"
      />
    </tr>
  </thead>
  <tbody
    class="sc-gikAfH bEiNWC"
  >
    <tr
      class="sc-kMjNwy gOtxDB"
    >
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content A1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content B1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content C1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      />
    </tr>
    <tr
      class="sc-kMjNwy imvxPg"
    >
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content A1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content B1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        Content C1
      </td>
      <td
        class="sc-bYMpWt fbjkRd"
      >
        <span
          class="sc-ilhmMj goweTh"
        >
          New
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
